--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -209,6 +209,17 @@ h2 {
     font-size: 50px;
     margin: 10px;
 }
+
+@media screen and (max-width:400px) {
+    .overlay p {
+        font-size: 1rem;
+    }
+
+    .overlay i {
+        font-size: 35px;
+    }
+    
+}
 /* Seccion Estudios */
 /* Seccion Contacto */
 /* Footer */
