--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -222,4 +222,51 @@ h2 {
 }
 /* Seccion Estudios */
 /* Seccion Contacto */
+.rectangulo {
+  margin-top: -25rem;
+  background-color: rgb(13, 110, 253);
+  color: white;
+  border-radius: 10px;
+  box-shadow: 0px 1px 4px 1px white;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 80%;
+  padding: 50px 50px;
+}
+
+.btn-contact {
+    font-size: 1.5rem;
+    border: 2px solid white;
+    box-shadow: 0 0 5px white;
+    transition: 0.5s ease-in;
+}
+
+.btn-contact:hover {
+    border:2px solid white;
+    background-color: white;
+    color: rgb(13, 110, 253);
+}
+
 /* Footer */
+.pie {
+    margin-top: 15rem;
+    margin-bottom: -25rem;
+    display: flex;
+    flex-direction: column;
+    padding: 0 75px;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-logo {
+    width: 50px;
+
+}
+
+.iconos-redes-sociales i {
+    font-size: 30px;
+    margin: 0 25px;
+    color: white;
+}
