--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -249,6 +249,12 @@ h2 {
     color: rgb(13, 110, 253);
 }
 
+@media screen and (max-width:400px) {
+    .rectangulo {
+        margin-top: -20rem;
+    }
+    
+}
 /* Footer */
 .pie {
     margin-top: 10rem;
